[gd_scene load_steps=3 format=3 uid="uid://dxo7c5a4ueeki"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_707ux"]
[ext_resource type="FontFile" uid="uid://do0yinjedn8al" path="res://fonts/DotGothic16-Regular.ttf" id="2_gn8g4"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_707ux")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 1088.0
offset_top = 640.0
offset_right = 1152.0
offset_bottom = 688.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_gn8g4")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_gn8g4")
theme_override_font_sizes/font_size = 18
text = "Hunt the Wumpus is a game is set in a cave that consists of 20 individual rooms. Each room is connected to 3 other rooms. The objective is to find the room where the Wumpus sleeps and shoot into it.

Left click an adjoining room to move into it. Right click an adjoining room to shoot into it. You cannot move or shoot into a room you already occupy.

The player begins with 5 shotgun shells. If they run out of shells before killing the Wumpus, the player loses the game.

In the cave are three kinds of threats: the Wumpus, two sinkholes, and two pitfalls.

If the player enters a room with the Wumpus, they are eaten and the game is lost.

If the player enters a room with a pitfall, they fall in and the game is lost.

If the player enters a room with a sinkhole, the sinkhole deposits them into a random room.

The player can \"sense\" threats in adjoining rooms. The messages are:

Nearby Wumpus: \"A terrible presence is near.\"
Nearby sinkhole: \"The earth shifts underfoot.\"
Nearby pitfall: \"A gust of wind blows.\"

When the player shoots, they win the game if they shoot into the room with the Wumpus. A missed shot will ricochet into four random adjoining rooms. If the ricochet will either hit the player (game over) or the Wumpus (the game is won). After shooting the Wumpus will either move to an adjoining room or remain in its current room."
autowrap_mode = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
