[gd_scene load_steps=5 format=3 uid="uid://rc1mvsfsvds3"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_707ux"]
[ext_resource type="FontFile" uid="uid://b1a0blqipd8iq" path="res://fonts/DotGothic16-Regular.ttf" id="2_xgax1"]
[ext_resource type="StyleBox" uid="uid://cx56lh3dk7lvx" path="res://sprites/new_style_box_flat.tres" id="3_hle50"]
[ext_resource type="StyleBox" uid="uid://kf732l5eavch" path="res://sprites/new_style_box_flat2.tres" id="4_ucvfv"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_707ux")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Title" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.25098, 0.192157, 0.552941, 1)
theme_override_fonts/font = ExtResource("2_xgax1")
theme_override_font_sizes/font_size = 128
text = "Hunt the Wumpus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xgax1")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("3_hle50")
theme_override_styles/hover = ExtResource("4_ucvfv")
text = "New Game"

[node name="InstructionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xgax1")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("3_hle50")
theme_override_styles/hover = ExtResource("4_ucvfv")
text = "Instructions"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xgax1")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("3_hle50")
theme_override_styles/hover = ExtResource("4_ucvfv")
text = "Quit Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
